# file-analyzer

./: .gitignore  .pre-commit-config.yaml  ARTIFACTS.md  CLAUDE.md  FASTVLM.md  INSTALL.md  MIGRATION.md  MODELS.md  MODEL_ANALYSIS.md  PYTHON_ARTIFACT_DISCIPLINE.md  PYTHON_MODULES.md  README.md  README_CLI.md  SHELL_TO_PYTHON_MIGRATION.md  analyze.sh  artifact_guard.sh  artifact_guard_py_adapter.sh  benchmark_fastvlm.py  check_all_scripts.sh  check_script_conformity.sh  cleanup.sh  config.json  fastvlm_errors.py  fastvlm_json.py  fastvlm_test.py  file_analyzer.py  install.sh  json_utils.py  migrate_artifacts.sh  pr_review_audit.md  preflight.sh  pyproject.toml  run_fastvlm_tests.sh  strict_example_test.sh  test_fastvlm.sh  test_fastvlm_json.py  test_hook.sh  test_json_output.sh  test_path_enforcement.sh  test_process_model.sh  (+2 more)
.githooks/: pre-commit
artifacts/: README.md
libs/: .gitignore  README.md
src/: analyzer.py  artifact_guard.py  artifact_guard_cli.py  benchmark_fastvlm.py  download_models.py  fastvlm_adapter.py  fastvlm_analyzer.py  fastvlm_errors.py  fastvlm_json.py  fastvlm_test.py  generate_benchmark_samples.py  model_analysis.py  model_analyzer.py  model_config.py  model_manager.py  vision.py
test_data/: config_example.json  run_tests.sh  sample.txt
tests/: bad_output.txt  env_example_test.sh  example_test.sh  strict_example.sh  test_analyze_cli.py  test_analyzer.py  test_artifact_discipline.py  test_artifact_discipline_pytest.py  test_artifact_discipline_unittest.py  test_artifact_guard.py  test_ban_manual_imports.py  test_basic.sh  test_benchmark.py  test_cli_cleanliness.py  test_cli_comprehensive.py  test_cli_entry_point.py  test_cli_essential.py  test_cli_integrations.py  test_cli_logging.py  test_core_functionality.py  test_downloaded_images.py  test_end_to_end.py  test_exit_codes.sh  test_exit_codes_forced.sh  test_fastvlm.sh  test_fastvlm_json.py  test_fastvlm_json_parsing.py  test_filename_generation.py  test_image_processing.py  test_json_error_handling.py  (+13 more)
(+95 files in other folders)
